/*
 * $Id: ChangeLog,v 1.1633 2003/10/27 15:05:46 toninhofwi Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-10-27 13:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
    * Added || iLastToken == OPTIONAL to IF_BELONG_LEFT macro to allow Opti[onal] as an array name.

2003-10-27 11:45 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/rtl/tobject.prg
  * include/struct.ch
  * tests/struct.prg
    + Add support for command Structure / Member / EndStructure to create
      objects using Associative Arrays.

2003-10-27 04:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/strcase.c
    * removed unused nLen in str...Upper...()

2003-10-26 12:13 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    * Clipper compatability of '.' handling in GetExpReal().
      /*
         In Extended Marker '.' should be accepted unconditionally.
         In non Extended Marker '.' starts a new numeric exp if following charcater is a digit
         even if preceding character is a digit which terminates and alphanumeric token
         (identifier).

         Once entering a numeric token, numeric extraction ends on first non digit character,
         even if continues.

         If character following a '.' is alpha it's accepted uncondtionally.
       */

  * contrib/Whoo/source/types.ch
    % Optimized #translate to #xcommand.

2003-10-20 19:38 UTC+1000 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/rtl/gtwin/gtwin.c
     ! Under WIN98 & WIN95, ALTGR is returned as just RIGHT_ALT pressed in
       ReadConsoleInput(); before, it was impossible to use correctly ALT-GR
       generated characters under win98.

2003-10-25 20:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbclass.ch
     * Minor corrections to comply with PP.
