@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1633 2003/10/27 15:05:46 toninhofwi Exp $
+ * $Id: ChangeLog,v 1.1634 2003/10/27 21:23:34 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-10-28 00:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    * Changed hb_ppNextToken() to accept a 2nd paramater sToken (pointer to token to return).
+    ! Fixed WorkMarkers() to use hb_ppNextToken() when extracting next stopper.
 
 2003-10-27 13:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/compiler/harbour.slx
